feat: add task contexts
